--- a/resources/in/linux/application.appdata.xml.in
+++ b/resources/in/linux/application.appdata.xml.in
@@ -6,22 +6,21 @@
   <name>@PROJECT_NAME@</name>
   <summary>@PROJECT_DESCRIPTION@</summary>
   <content_rating type="oars-1.0" />
-
-  @PROJECT_DESCRIPTION_HTML@
-
+@PROJECT_DESCRIPTION_HTML@
+  <project_group>@PROJECT_ORGANIZATION_NAME@</project_group>
+  <developer_name>@PROJECT_AUTHOR_NAME@</developer_name>
+  <update_contact>@PROJECT_AUTHOR_EMAIL@</update_contact>
+  <url type="homepage">@PROJECT_HOMEPAGE_URL@</url>
   <screenshots>
     <screenshot type="default">
-      <caption>The main window</caption>
-      <image>@PROJECT_REPOSITORY_URL@/blob/@PROJECT_REPOSITORY_BRANCH@/screenshot.png</image>
+      <caption>Screenshot</caption>
+      <image>@PROJECT_REPOSITORY_URL@/blob/@PROJECT_REPOSITORY_BRANCH@/resources/screenshot.png</image>
     </screenshot>
   </screenshots>
-
-  <url type="homepage">@PROJECT_HOMEPAGE_URL@</url>
-
   <provides>
     <binary>@PROJECT_ID@</binary>
   </provides>
-  
-  @PROJECT_RELEASES@
-  
+  <launchable type="desktop-id">@PROJECT_APPSTREAM_ID@.desktop</launchable>
+@PROJECT_KEYWORDS_HTML@
+@PROJECT_RELEASES_HTML@
 </component>
